# physics-simulation

./: .gitignore  BULLET_PHYSICS_IMPLEMENTATION_PLAN.md  BULLET_PHYSICS_READY.md  CMakeLists.txt  LICENSE  PhysicsEngine  README.md  build.bat  build.ps1  build.sh  create_scene.sh
demos/: CMakeLists.txt  CMakeLists.txt.backup  README.md
demos/BallCollision2/: BallCollision2CameraController.cpp  BallCollision2CameraController.h  BallCollision2Scene.cpp  BallCollision2Scene.h  CMakeLists.txt  main.cpp
demos/BallCollisionScene/: BallCollisionScene.cpp  BallCollisionScene.h  CMakeLists.txt  main.cpp
demos/BallFreeFall/: BallFreeFallScene.cpp  BallFreeFallScene.h  CMakeLists.txt  main.cpp
demos/BasicDemoScene/: BasicDemoScene.h  CMakeLists.txt  main.cpp
demos/BasicGroundBall/: BasicGroundBallScene.cpp  BasicGroundBallScene.h  CMakeLists.txt  main.cpp
demos/TerrainScene/: CMakeLists.txt  TerrainScene.cpp  TerrainScene.h  main.cpp
docs/: README.md
docs/guides/: ReferenceGuide.md
docs/project-plans/: BUILD_SYSTEM_REFACTOR_PLAN.md  BULLET_PHYSICS_IMPLEMENTATION_PLAN.md  BULLET_PHYSICS_READY.md  MULTI_CAMERA_SYSTEM_PLAN.md  README.md  todo.txt
docs/reference/: BallMovementPatterns.md  BulletPhysicsProperties.md  CameraPositions.md  PhysicsScenarios.md  README.md
engine/: CMakeLists.txt
engine/include/: BaseScene.h  World.h
engine/include/bullet/: BulletCollisionShapes.h  BulletRigidBody.h  BulletWorld.h
engine/include/rendering/camera/: CameraController.h  CameraManager.h  FixedCamera.h  FollowCamera.h  OrbitCamera.h
engine/src/: BaseScene.cpp
engine/src/bullet/: BulletCollisionShapes.cpp  BulletRigidBody.cpp  BulletWorld.cpp
engine/src/core/: CollisionSystem.cpp  InertiaTensorCache.cpp  InertiaTensorCache.h  PhysicsObjectPool.h  World.cpp
engine/src/rendering/: Camera.cpp  Camera.h  FPSRenderer.cpp  FPSRenderer.h  GridRenderer.cpp  GridRenderer.h  Skybox.h  Terrain.cpp  Terrain.h
engine/src/rendering/camera/: CameraManager.cpp  FixedCamera.cpp  FollowCamera.cpp  OrbitCamera.cpp
engine/src/shapes/: Box.h  Cylinder.cpp  Plane.cpp  Plane.h  Sphere.cpp
engine/src/utils/: MeshGenerator.cpp  TerrainGenerator.h
include/: RigidBody2D.h  World.h
includes/: Vec2.h
scenarios/: BallCollisionDemo.cpp  BallCollisionDemo.h  BaseScenario.h  BaseScene.cpp  BaseScene.h  BasicDemoScenario.cpp  BasicDemoScenario.h  TerrainScenario.cpp  TerrainScenario.h
scenarios/BallCollisionScene/: BallCollisionScene.cpp  BallCollisionScene.h
scenarios/BasicDemoScene/: BasicDemoScene.cpp  BasicDemoScene.h
scenarios/TerrainScene/: TerrainScene.h
src/: RigidBody2D.cpp  Vec2.cpp  World.cpp  main.cpp  main_new.cpp
src/core/: BaseShape.h  CollisionSystem.cpp  CollisionSystem.h  PhysicsConstants.h  PhysicsObjectPool.cpp  RigidBody3D.cpp  RigidBody3D.h  World.cpp
src/rendering/: Camera.cpp  Camera.h  FPSRenderer.cpp  FPSRenderer.h  GrassRenderer.cpp  GrassRenderer.h  Mesh.cpp  Mesh.h  MeshCache.cpp  MeshCache.h  RockRenderer.cpp  RockRenderer.h  Shader.cpp  Shader.h  Skybox.cpp
src/shapes/: Box.cpp  Cylinder.h  Sphere.cpp  Sphere.h
src/utils/: MeshGenerator.cpp  MeshGenerator.h  TerrainGenerator.cpp
